--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "fyndiqmerchant/backoffice/includes/fyndiqAPI"]
 	path = fyndiqmerchant/backoffice/includes/fyndiqAPI
 	url = git@github.com:fyndiq/fyndiq-api-wrapper-php.git
+[submodule "fyndiqmerchant/backoffice/includes/shared"]
+	path = fyndiqmerchant/backoffice/includes/shared
+	url = git@github.com:fyndiq/fyndiq-module-shared.git
