--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="tests/bootstrap.php" colors="true">
     <testsuites>
-        <testsuite name="Fyndiq Gambio Module">
+        <testsuite name="Fyndiq Prestashop Module">
             <directory>tests/src/</directory>
         </testsuite>
     </testsuites>
@@ -10,12 +10,8 @@
         <whitelist>
             <directory suffix=".php">src/</directory>
             <exclude>
-                <file>src/admin/fyndiq.php</file>
-                <file>src/admin/fyndiq/helpers.php</file>
-                <directory suffix=".php">src/export/</directory>
-                <directory suffix=".php">src/admin/fyndiq/shared/</directory>
-                <directory suffix=".php">src/admin/fyndiq/api/</directory>
-                <directory suffix=".php">src/admin/fyndiq/templates/</directory>
+                <file>src/fyndiqmerchant.php</file>
+                <directory suffix=".php">src/backoffice/includes/</directory>
             </exclude>
         </whitelist>
     </filter>
