--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,6 +6,10 @@ Vagrant.configure(2) do |config|
   config.vm.network "private_network", ip: "192.168.13.100"
   config.vm.hostname = "prestashop"
 
+  config.vm.provider "virtualbox" do |v|
+    v.name = "prestashop"
+  end
+
   config.ssh.forward_agent = true
 
   config.vm.synced_folder "../", "/opt/fyndiq-prestashop-module"
