--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -14,5 +14,5 @@ Vagrant.configure(2) do |config|
 
   config.vm.synced_folder "../", "/opt/fyndiq-prestashop-module"
 
-  config.vm.provision :shell, path: "./provision.sh"
+  config.vm.provision :shell, path: "./provision1.6.sh"
 end
