--- a/vagrant/assets/001-prestashop.conf
+++ b/vagrant/assets/001-prestashop.conf
@@ -3,6 +3,7 @@
   ServerName prestashop.local
   <Directory "/var/www/html/prestashop/">
     SetEnv FYNDIQ_API_URL http://fyndiq.local:8080/api/v2/
+    SetEnv FYNDIQ_DEBUG 1
     Options Indexes FollowSymLinks
     Require all granted
     Order allow,deny
