--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -3,6 +3,12 @@
 
 Vagrant.configure(2) do |config|
   config.vm.box = "ubuntu/trusty64"
+
+  config.vm.provider "parallels" do |v, override|
+    override.vm.box = "parallels/ubuntu-14.04"
+    override.vm.box_url = "https://vagrantcloud.com/parallels/ubuntu-14.04"
+  end
+
   config.vm.network "private_network", ip: "192.168.13.100"
   config.vm.hostname = "prestashop"
 
@@ -11,6 +17,7 @@ Vagrant.configure(2) do |config|
   end
 
   config.ssh.forward_agent = true
+  config.ssh.shell = "bash -c 'BASH_ENV=/etc/profile exec bash'"
 
   config.vm.synced_folder "../", "/opt/fyndiq-prestashop-module"
 
