--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "phpmd/phpmd" : "@stable",
         "phpunit/phpunit": "4.6.*",
         "squizlabs/php_codesniffer": "2.*",
-        "bartlett/php-compatinfo": "4.1.0"
+        "bartlett/php-compatinfo": "4.1.0",
+        "fabpot/php-cs-fixer": "^1.11"
     }
 }
